@@ -1,3 +1,8 @@
+2012-08-20  Richard Earnshaw  <rearnsha@arm.com>
+
+	PR tree-ssa/54295
+	* gcc.c-torture/execute/20120817-1.c: New test.
+
 2013-05-15  Richard Sandiford  <rdsandiford@googlemail.com>
 
 	PR target/57260
